app-2/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
  namespace: retail-store
  labels:
    app: app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
        - name: app-2
          image: thejoud1997/app-2:latest
          ports:
            - containerPort: 3000
