app-2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-active
  namespace: retail-store
spec:
  selector:
    app: app-2
  ports:
    - name: https
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app-2-preview
  namespace: retail-store
spec:
  selector:
    app: app-2
  ports:
    - name: https
      port: 80
      targetPort: 3000
  type: ClusterIP
