app-2/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-2-network-policy
  namespace: retail-store
spec:
  podSelector:
    matchLabels:
      app: app-2
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: app-1
      ports:
        - port: 3000
          protocol: TCP
